--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <dt-root></dt-root>
 </body>
 </html>
