--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,14 @@
 </head>
 <body>
   <dt-root></dt-root>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109483663-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-109483663-1');
+  </script>
+
 </body>
 </html>
